syntax = "proto3";

package urlshortener;

option go_package = "./proto";

service URLShortener {
    rpc Shorten (ShortenRequest) returns (ShortenResponse);
    rpc Resolve (ResolveRequest) returns (ResolveResponse);
}

message ShortenRequest {
    string original_url = 1;
}

message ShortenResponse {
    string short_code = 1;
}

message ResolveRequest {
    string short_code = 1;
}

message ResolveResponse {
    string original_url = 1;
}
